force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hair_Restoration_consult_Other_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hair_Restoration_consult_Other_Notes__c</fullName>
    <label>Hair Restoration consult Other Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>