force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hair_restoration_Counseling__c.field-meta.xml
<CustomField>
    <fullName>Hair_restoration_Counseling__c</fullName>
    <label>Hair restoration Counseling</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diagnosis Counseling</fullName>
            </value>
            <value>
                <fullName>Smokers</fullName>
            </value>
            <value>
                <fullName>Alopecia Areata</fullName>
            </value>
            <value>
                <fullName>Scarring Alopecia</fullName>
            </value>
            <value>
                <fullName>Scar Camouflage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>