force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hair_RestorationCosmetic_Notes__c.field-meta.xml
<CustomField>
    <fullName>Hair_RestorationCosmetic_Notes__c</fullName>
    <label>Hair RestorationCosmetic Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>