force-app/main/default/objects/Hair_Restoration_consult__c/fields/Have_you_undergone_menopause__c.field-meta.xml
<CustomField>
    <fullName>Have_you_undergone_menopause__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>Have you undergone menopause?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>