force-app/main/default/objects/Hair_Restoration_consult__c/fields/History_of_chemotherapy_or_radiation__c.field-meta.xml
<CustomField>
    <fullName>History_of_chemotherapy_or_radiation__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>History of chemotherapy or radiation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>