force-app/main/default/objects/Hair_Restoration_consult__c/fields/History_of_over_EyeBrow_plucking__c.field-meta.xml
<CustomField>
    <fullName>History_of_over_EyeBrow_plucking__c</fullName>
    <label>History of over EyeBrow plucking?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>