force-app/main/default/objects/Hair_Restoration_consult__c/fields/history_of_physical_trauma_to_eyelashes__c.field-meta.xml
<CustomField>
    <fullName>history_of_physical_trauma_to_eyelashes__c</fullName>
    <label>history of physical trauma to  eyelashes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>