force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hormone_Plan_Aged_Garlic__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Aged_Garlic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan Aged Garlic</label>
    <type>Checkbox</type>
</CustomField>