force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hormone_Plan_CoQ10__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_CoQ10__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan CoQ10</label>
    <type>Checkbox</type>
</CustomField>