force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hormone_Plan_DHEA__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_DHEA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan DHEA</label>
    <type>Checkbox</type>
</CustomField>