force-app/main/default/objects/Hair_Restoration_consult__c/fields/Hormone_Plan_Vit_D3_D3_K2__c.field-meta.xml
<CustomField>
    <fullName>Hormone_Plan_Vit_D3_D3_K2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hormone Plan Vit D3 D3/K2</label>
    <type>Checkbox</type>
</CustomField>