force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Ace_Inhibitor__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Ace_Inhibitor__c</fullName>
    <label>Hormone Plan Ace Inhibitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>