force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Aged_Garlic__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Aged_Garlic__c</fullName>
    <label>Hormone Plan Aged Garlic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>