force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_CoQ10__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_CoQ10__c</fullName>
    <label>Hormone Plan CoQ10</label>
    <length>255</length>
    <type>Text</type>
</CustomField>