force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_DHEA_Pregnenolone__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_DHEA_Pregnenolone__c</fullName>
    <label>Hormone Plan DHEA/Pregnenolone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>