force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Fish_oil__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Fish_oil__c</fullName>
    <label>Hormone Plan Fish oil</label>
    <length>255</length>
    <type>Text</type>
</CustomField>