force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_lodine__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_lodine__c</fullName>
    <label>Hormone Plan lodine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>