force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Other__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Other__c</fullName>
    <label>Hormone Plan Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>