force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Vit_D3__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Vit_D3__c</fullName>
    <label>Hormone Plan Vit D3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>