force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Vit_D3_ADK__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Vit_D3_ADK__c</fullName>
    <label>Hormone Plan Vit D3 - ADK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>