force-app/main/default/objects/Hair_Restoration_consult__c/fields/HormonePlan_Vit_D3_D3_K2__c.field-meta.xml
<CustomField>
    <fullName>HormonePlan_Vit_D3_D3_K2__c</fullName>
    <label>Hormone Plan Vit D3 D3/K2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>