force-app/main/default/objects/Hair_Restoration_consult__c/fields/HPI_No_of_Grafts__c.field-meta.xml
<CustomField>
    <fullName>HPI_No_of_Grafts__c</fullName>
    <label>HPI No. of Grafts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>