force-app/main/default/objects/Hair_Restoration_consult__c/fields/HPI_Surgeon__c.field-meta.xml
<CustomField>
    <fullName>HPI_Surgeon__c</fullName>
    <label>HPI Surgeon</label>
    <length>255</length>
    <type>Text</type>
</CustomField>