force-app/main/default/objects/Hair_Restoration_consult__c/fields/List_drug_name_and_dates_of_treatment__c.field-meta.xml
<CustomField>
    <fullName>List_drug_name_and_dates_of_treatment__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>List drug name and dates of treatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>