force-app/main/default/objects/Hair_Restoration_consult__c/fields/Noticed_any_redness_flaking_inflammation__c.field-meta.xml
<CustomField>
    <fullName>Noticed_any_redness_flaking_inflammation__c</fullName>
    <description>Have you noticed any redness/flaking/inflammation to the face area?</description>
    <label>Noticed any redness/flaking/inflammation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>