force-app/main/default/objects/Hair_Restoration_consult__c/fields/Noticed_redness_flaking_inflammation__c.field-meta.xml
<CustomField>
    <fullName>Noticed_redness_flaking_inflammation__c</fullName>
    <description>Have you noticed redness/flaking/inflammation to
the eyelashes (blepharitis)?</description>
    <label>Noticed redness/flaking/inflammation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>