force-app/main/default/objects/Hair_Restoration_consult__c/fields/Please_explain_event_year__c.field-meta.xml
<CustomField>
    <fullName>Please_explain_event_year__c</fullName>
    <description>Facial Hair Loss Questionnaire</description>
    <label>Please explain (event/year)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>