force-app/main/default/objects/Hair_Restoration_consult__c/fields/please_explain_event_year_EyeBrows__c.field-meta.xml
<CustomField>
    <fullName>please_explain_event_year_EyeBrows__c</fullName>
    <label>please explain (event/year)EyeBrows</label>
    <length>255</length>
    <type>Text</type>
</CustomField>