force-app/main/default/objects/Hair_Restoration_consult__c/fields/please_explain_event_year_For_Eyelash__c.field-meta.xml
<CustomField>
    <fullName>please_explain_event_year_For_Eyelash__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>please explain (event/year) For Eyelash</label>
    <length>255</length>
    <type>Text</type>
</CustomField>