force-app/main/default/objects/Hair_Restoration_consult__c/fields/Products_have_you_tried_for_Eyebrow__c.field-meta.xml
<CustomField>
    <fullName>Products_have_you_tried_for_Eyebrow__c</fullName>
    <description>What products have you tried to help grow or thicken your eyebrow hairs?</description>
    <label>Products have you tried for Eyebrow?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>