force-app/main/default/objects/Hair_Restoration_consult__c/fields/Pulling_out_your_eyebrow_hairs__c.field-meta.xml
<CustomField>
    <fullName>Pulling_out_your_eyebrow_hairs__c</fullName>
    <description>Do you have a history of excessively pulling out your eyebrow hairs?</description>
    <label>Pulling out your eyebrow hairs?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>