force-app/main/default/objects/Hair_Restoration_consult__c/fields/Scalp_biopsy_results__c.field-meta.xml
<CustomField>
    <fullName>Scalp_biopsy_results__c</fullName>
    <label>Scalp biopsy results</label>
    <length>255</length>
    <type>Text</type>
</CustomField>