force-app/main/default/objects/Hair_Restoration_consult__c/fields/Scalp_biopsy_to_evaluate_your_hair_loss__c.field-meta.xml
<CustomField>
    <fullName>Scalp_biopsy_to_evaluate_your_hair_loss__c</fullName>
    <label>Scalp biopsy to evaluate your hair loss?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>