force-app/main/default/objects/Hair_Restoration_consult__c/fields/Serious_illness_during_the_past_year__c.field-meta.xml
<CustomField>
    <fullName>Serious_illness_during_the_past_year__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>Serious illness during the past year?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>