force-app/main/default/objects/Hair_Restoration_consult__c/fields/Skin_disease_such_alopecia_areata__c.field-meta.xml
<CustomField>
    <fullName>Skin_disease_such_alopecia_areata__c</fullName>
    <description>Facial
Diagnosed any skin disease such  alopecia/areata/alopecia/totalis/psoriasis?</description>
    <label>Skin disease such  alopecia/areata</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>