force-app/main/default/objects/Hair_Restoration_consult__c/fields/Thyroid_levelLast_checked__c.field-meta.xml
<CustomField>
    <fullName>Thyroid_levelLast_checked__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>Thyroid level last checked?</label>
    <type>Date</type>
</CustomField>