force-app/main/default/objects/Hair_Restoration_consult__c/fields/Tried_Latisse_Bimatoprost__c.field-meta.xml
<CustomField>
    <fullName>Tried_Latisse_Bimatoprost__c</fullName>
    <description>Have you ever tried Latisse (Bimatoprost) to grow your eyelashes?</description>
    <label>Tried Latisse (Bimatoprost)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>