force-app/main/default/objects/Hair_Restoration_consult__c/fields/what_illness_and_how_long__c.field-meta.xml
<CustomField>
    <fullName>what_illness_and_how_long__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>what illness and how long?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>