force-app/main/default/objects/Hair_Restoration_consult__c/fields/what_is_your_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_diagnosis__c</fullName>
    <description>Facial Hair Loss Questionnaire
what is your diagnosis, when were you diagnosed and what treatments have you tried?</description>
    <label>what is your diagnosis?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>