force-app/main/default/objects/Hair_Restoration_consult__c/fields/what_is_your_diagnosis_for_EyeBrow__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_diagnosis_for_EyeBrow__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire</description>
    <label>what is your diagnosis for EyeBrow?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>