force-app/main/default/objects/Hair_Restoration_consult__c/fields/what_is_your_diagnosis_When__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_diagnosis_When__c</fullName>
    <description>what is your diagnosis, when were you diagnosed, and what treatments have you tried?</description>
    <label>what is your diagnosis/When??</label>
    <length>255</length>
    <type>Text</type>
</CustomField>