force-app/main/default/objects/Hair_Restoration_consult__c/fields/What_is_yourDiagnosis_When__c.field-meta.xml
<CustomField>
    <fullName>What_is_yourDiagnosis_When__c</fullName>
    <description>Eyelash Hair Loss Questionnaire
what is your diagnosis, when were you diagnosed and what treatments have your tried?</description>
    <label>What is your diagnosis/When?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>