force-app/main/default/objects/Hair_Restoration_consult__c/fields/What_isYour_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>What_isYour_diagnosis__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>What is your diagnosis?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>