force-app/main/default/objects/Hair_Restoration_consult__c/fields/What_products_have_you_tried__c.field-meta.xml
<CustomField>
    <fullName>What_products_have_you_tried__c</fullName>
    <description>What products have you tried to help grow or thicken your facial hair?</description>
    <label>What products have you tried?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>