force-app/main/default/objects/Hair_Restoration_consult__c/fields/when_was_your_last_episode__c.field-meta.xml
<CustomField>
    <fullName>when_was_your_last_episode__c</fullName>
    <description>Facial Hair Loss Questionnaire</description>
    <label>when was your last episode?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>