force-app/main/default/objects/Hair_Restoration_consult__c/fields/which_medication_s_and_when__c.field-meta.xml
<CustomField>
    <fullName>which_medication_s_and_when__c</fullName>
    <description>EyeBrow Hair Loss Questionnaire
Which medication(s) and when did you begin taking the medication?</description>
    <label>which medication(s) and when ?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>