force-app/main/default/objects/Hair_Restoration_consult__c/fields/Which_medications_and_when__c.field-meta.xml
<CustomField>
    <fullName>Which_medications_and_when__c</fullName>
    <description>Eyelash Hair Loss Questionnaire
which medication(s) and when did you begin taking the medication(s)?</description>
    <label>Which medication(s) and when</label>
    <length>255</length>
    <type>Text</type>
</CustomField>