force-app/main/default/objects/Hair_Restoration_consult__c/fields/Your_last_episode_for_Eyelash_Hair_Loss__c.field-meta.xml
<CustomField>
    <fullName>Your_last_episode_for_Eyelash_Hair_Loss__c</fullName>
    <description>Eyelash Hair Loss Questionnaire</description>
    <label>Your last episode for Eyelash Hair Loss?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>